starlark-rust/starlark_syntax/src/syntax/grammar_tests/list_in_index_expr.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
x[1, 2] = 3

Error:
error: left-hand-side of assignment must take the form `a`, `a.b` or `a[b]`
 --> list_in_index_expr:1:1
  |
1 | x[1, 2] = 3
  | ^^^^^^^
  |
